--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,12 +16,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="RecycleView paps!" />
+    <TextView
+        android:id="@+id/dateCurr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!-- A RecyclerView with some commonly used attributes -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/dateCurr"/>
 
 </RelativeLayout>
