--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,14 +10,25 @@
 xmlns:card_view="http://schemas.android.com/apk/res-auto"
 android:id="@+id/card_view"
 android:layout_gravity="center_vertical"
-android:layout_width="100dp"
-android:layout_height="100dp"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
 card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/info_text"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/surname"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
 
-<TextView
-    android:id="@+id/info_text"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
 
 </LinearLayout>
